--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
     ports:
       - '8080:80'
     volumes:
+      - ./app:/var/www/app
       - ./src:/var/www/html
+      - ./vendor:/var/www/vendor
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     links:
       - php-fpm
@@ -17,7 +19,11 @@ services:
     env_file:
       - .env
     volumes:
+      - ./app:/var/www/app
       - ./src:/var/www/html
+      - ./vendor:/var/www/vendor
+    depends_on:
+      - mariadb
 
   mariadb:
     image: mariadb:10.6
