--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "slim/psr7": "^1.6",
         "php-di/slim-bridge": "^3.3",
         "doctrine/orm": "^2.15",
-        "symfony/cache": "^6.2"
+        "symfony/cache": "^6.2",
+        "vlucas/phpdotenv": "^5.5"
     }
 }
